# cropscout-interface

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
cropscout/: httpsredirect.py  main.py  models.py
cropscout/db/: __init__.py
cropscout/static/: app.js  index.html
